Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-11238

sanity-flr test 47 fails with “component 131075 objects allocated on 0, shouldn't on OST0”

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.12.0
    • Lustre 2.12.0
    • DNE
    • 3
    • 9223372036854775807

      sanity-flr test_47 started failing on August 10, 2018 with Lustre version 2.11.53.66 build #3776. So far, we only see this failure for DNE testing.

      From the full test session logs at https://testing.whamcloud.com/test_sets/3f6ba1b6-9dd4-11e8-87f3-52540065bddc, the following is the test_log for this test

      == sanity-flr test 47: Verify mirror obj alloc ======================================================= 19:07:06 (1533928026)
      striped dir -i3 -c2 /mnt/lustre/d47.sanity-flr
      3+0 records in
      3+0 records out
      3145728 bytes (3.1 MB) copied, 0.0718565 s, 43.8 MB/s
      /mnt/lustre/d47.sanity-flr/f47.sanity-flr
        lcm_layout_gen:    8
        lcm_mirror_count:  2
        lcm_entry_count:   4
          lcme_id:             65537
          lcme_mirror_id:      1
          lcme_flags:          init,prefer
          lcme_extent.e_start: 0
          lcme_extent.e_end:   2097152
            lmm_stripe_count:  1
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: 0
            lmm_objects:
            - 0: { l_ost_idx: 0, l_fid: [0x100000000:0x4063:0x0] }
      
          lcme_id:             65538
          lcme_mirror_id:      1
          lcme_flags:          init,prefer
          lcme_extent.e_start: 2097152
          lcme_extent.e_end:   EOF
            lmm_stripe_count:  2
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: 1
            lmm_objects:
            - 0: { l_ost_idx: 1, l_fid: [0x100010000:0x4083:0x0] }
            - 1: { l_ost_idx: 2, l_fid: [0x100020000:0x4043:0x0] }
      
          lcme_id:             131075
          lcme_mirror_id:      2
          lcme_flags:          init
          lcme_extent.e_start: 0
          lcme_extent.e_end:   2097152
            lmm_stripe_count:  1
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: 0
            lmm_objects:
            - 0: { l_ost_idx: 0, l_fid: [0x100000000:0x4064:0x0] }
      
          lcme_id:             131076
          lcme_mirror_id:      2
          lcme_flags:          init
          lcme_extent.e_start: 2097152
          lcme_extent.e_end:   EOF
            lmm_stripe_count:  1
            lmm_stripe_size:   1048576
            lmm_pattern:       raid0
            lmm_layout_gen:    0
            lmm_stripe_offset: 3
            lmm_objects:
            - 0: { l_ost_idx: 3, l_fid: [0x100030000:0x3fd9:0x0] }
      
       sanity-flr test_47: @@@@@@ FAIL: component 131075 objects allocated on 0,  shouldn't on OST0 
      

      Here are logs for a few of these sanity-flr failures:
      https://testing.whamcloud.com/test_sets/7470cf3e-9c95-11e8-b0aa-52540065bddc
      https://testing.whamcloud.com/test_sets/3f6ba1b6-9dd4-11e8-87f3-52540065bddc
      https://testing.whamcloud.com/test_sets/c116620a-9df7-11e8-b0aa-52540065bddc

            bobijam Zhenyu Xu
            jamesanunez James Nunez (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: