LU-11238 lod: refine obj avoid collect for FLR

When a FLR file is being created, the MDS tries to allocate objects
for the first components of all mirrors, and in this decalre phase,
the objects for their component has been allocated, but the
component's ID and init flag has not been set until the exec phase,
lod_create()->lod_striped_create(), so lod_collect_avoidance() should
take heed of this scenario.

This patch also addes some debug messages.

Test-Parameters: testlist=sanity-flr,sanity-flr,sanity-flr,sanity-flr,sanity-flr
Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I16ef2da44f6db06a8e0bc67ae2646cdc3ff3bb63
Reviewed-on: https://review.whamcloud.com/32995
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: John L. Hammond <jhammond@whamcloud.com>
Reviewed-by: Jinshan Xiong <jinshan.xiong@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>